# fast-vc-service

./: ,l .md  .env  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  README_ZH.md  app.py  buffer.py  config.py  file_vc.py  logging_config.py  models.py  pyproject.toml  realtime_infer.py  realtime_vc.py  realtime_voice_conversion.py  session.py
client/: file_vc.py  ws_client.py
configs/: config_dit_mel_seed_uvit_xlsr_tiny.yml  prod.yaml
docs/: 关于vc过程中的-samplerate.md  换声过程中的流程模块.md
docs/api_docs/: websocket-api-doc.md  websocket-api-doc_EN.md
docs/getting_started/: Location of Output Region When a New Chunk is Incoming.md  quick_started.md  quick_started_en.md
docs/perfermance_tests/: performance-test-report_version0.1.0_1080ti.md  version0.1.0_1080ti.md  version0.1.0_4090D.md  version0.1.0_v100.md
docs/接口文档/: WebSocket API规范.md
examples/: file_vc.py  ws_client.py
examples/file_conversion/: file_vc.py
examples/websocket/: README.md  concurrent_ws_client.py  simple_protocol_ws_client.py  ws_client.py  ws_client_realtime.py
routers/: __init__.py  base_router.py  websocket_router.py
scripts/: clean_logs.sh  shutdown.sh  start.sh
src/: opus_processor.py
src/fast_vc_service/: __init__.py  app.py  buffer.py  cli.py  config.py  livekit_audio_processor.py  logging_config.py  models.py  realtime_vc.py  session.py
src/fast_vc_service/adapters/: protocol_adapter.py  protocol_detector.py
src/fast_vc_service/routers/: __init__.py  base.py  base_router.py  livekit.py  tools.py  tools_router.py  websocket_router.py  ws.py
src/fast_vc_service/tools/: analyze_f0.py  eval.py  resample.py  session_data_manager.py  timeline_analyzer.py  timeline_lognize.py
src/fast_vc_service/utils/: __init__.py  timer.py
utils/: __init__.py  singleton.py  timer.py
