[project]
name = "fast-vc-service"
version = "0.0.1"
description = "Real-time voice conversion service based on Seed-VC, providing WebSocket voice conversion with PCM and Opus audio format support"
authors = [
    {name = "Leroll",email = "senjaer1919@gmail.com"}
]
license = {text = "GPL 3.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
