[project]
name = "fast-vc-service"
version = "0.0.1"
description = "Real-time voice conversion service based on Seed-VC, providing WebSocket voice conversion with PCM and Opus audio format support"
authors = [
    {name = "Leroll",email = "senjaer1919@gmail.com"}
]
license = {text = "GPL 3.0"}
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
loguru = "^0.7.3"
pydantic = "^2.11.5"
numpy = "^2.2.6"
resampy = "^0.4.3"
opuslib = "^3.0.1"
pyyaml = "^6.0.2"
torch = {version = "2.4.0", source = "pytorch"}
torchvision = {version = "0.19.0", source = "pytorch"}
torchaudio = {version = "2.4.0", source = "pytorch"}


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
